@@ -73,25 +73,8 @@
       </p>
     </td>
   </tr>
-
-  <tr>
-
-  <th class="news">
-  Encouragez <br>
-    le d&eacute;veloppement
-  </th>
-  </tr>
- 
-  <tr>
-  <td><p>Vous souhaitez utiliser LilyPond avec toujours plus de
-    plaisir&nbsp;? Alors soutenez son d&eacute;veloppement.
-    </p>
-    <p class="teaser">
-    Plus d'infos sur le <a href="sponsor/">m&eacute;c&eacute;nat</a>.</p>
-       </td>
-  </tr>
   
-
+  
 </table>
 
 <br>
